# ybml

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.md.in  generate_readme.py  inspect_modules.py  justfile  main.py  pyproject.toml  scratch_dyniso.py
.github/workflows/: ci.yml
demo/: expanding_coord_mlp.py  single_img_deep_coord_mlp.py
demo/ytch_two_moons/: __main__.py  config.py  metrics.py  model.py  sweep.py  train.py  viz.py
yjax/: test.py
ymc/git/: __init__.py  test.py
ymc/lr/: __init__.py  test.py
ymc/random/: __init__.py  test.py
ymlx/nn/retain_write_swiglu/: __init__.py  test.py
ymlx/nn/swiglu/: __init__.py  test.py
ytch/: __init__.py  device.py
ytch/attention/cross_attention/: __init__.py  test.py
ytch/attention/mh/: __init__.py  test.py
ytch/constants/: __init__.py  test.py
ytch/correctness/: __init__.py  test.py
ytch/correctness/gradients/: __init__.py  test.py
ytch/correctness/shapes/: test.py
ytch/device/: __init__.py  test.py
ytch/estimators/: __init__.py  bptt.py  reinforce.py  test.py
ytch/estimators/reinforce/: __init__.py
ytch/estimators/reinforce/baseline/: __init__.py  test.py
ytch/estimators/reinforce/rtg/: __init__.py  test.py
ytch/estimators/reinforce/surrogate/: __init__.py  test.py
ytch/grad/: __init__.py  test.py
ytch/layers/elementwise_affine/: test.py
ytch/layers/skip/: test.py
ytch/lr/warmup/: __init__.py  test.py
ytch/magic/: __init__.py
ytch/magic/dyniso/: __init__.py  test.py
ytch/metrics/: __init__.py  test.py
ytch/model/: __init__.py  test.py
ytch/nn/: __init__.py
ytch/nn/elementwise_affine/: __init__.py  test.py
ytch/nn/film/: __init__.py  test.py
ytch/nn/grad_multiply/: __init__.py  test.py
ytch/nn/layer_scale/: __init__.py  test.py
ytch/nn/rff/: __init__.py  test.py
ytch/nn/skip/: __init__.py  test.py
ytch/train/: __init__.py  test.py
