[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ybml"
version = "0.1.0"
description = "A collection of ML utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mlflow>=3.5.0",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "zclip",
]

[tool.hatch.build.targets.wheel]
packages = ["ymc", "ytch", "yjax", "ymlx"]

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
    "rust-just>=1.43.0",
]

[tool.ruff.lint]
ignore = []

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test*.py"
python_functions = "test_*"

[tool.uv.sources]
zclip = { git = "https://github.com/bluorion-com/ZClip.git" }

[tool.basedpyright]
reportMissingTypeStubs = "none"
reportExplicitAny = "none"
reportAny = "none"
